--- a/.github/workflows/build-with-docker-action.yml
+++ b/.github/workflows/build-with-docker-action.yml
@@ -101,7 +101,10 @@ jobs:
           # if we want to split more
           TEMP=$(mktemp -d || exit 1)
           
-          MATRIX="cat "${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | awk '{if (\$6 == \"yes\" || \$6 == \"adv\") print \$0;}' |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
+          LIST="cat "${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | awk '{if (\$6 == \"yes\" || \$6 == \"adv\") print \$0;}' |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
+
+          eval $LIST > $TEMP/data.txt
+          MATRIX="cat <<< cat $TEMP/data.txt"
 
           [ -s changes ] || unset MATRIX
           
