Add bullseye to nightly builds

--- a/targets-cli-beta.conf
+++ b/targets-cli-beta.conf
@@ -1,13 +1,16 @@
 jethubj100                   current         jammy       cli                      beta         yes
 jethubj100                   current         kinetic     cli                      beta         yes
 jethubj100                   current         sid         cli                      beta         yes
+jethubj100                   current         bullseye    cli                      beta         yes
 jethubj100                   edge            jammy       cli                      beta         yes
 jethubj100                   edge            kinetic     cli                      beta         yes
 jethubj100                   edge            sid         cli                      beta         yes
+jethubj100                   edge            bullseye    cli                      beta         yes
 jethubj80                    current         jammy       cli                      beta         yes
 jethubj80                    current         kinetic     cli                      beta         yes
 jethubj80                    current         sid         cli                      beta         yes
+jethubj80                    current         bullseye    cli                      beta         yes
 jethubj80                    edge            jammy       cli                      beta         yes
 jethubj80                    edge            kinetic     cli                      beta         yes
 jethubj80                    edge            sid         cli                      beta         yes
-
+jethubj80                    edge            bullseye    cli                      beta         yes
