Disable EXTERNAL_NEW packages

--- a/configs/config-all-new-images.conf
+++ b/configs/config-all-new-images.conf
@@ -5,7 +5,7 @@ KERNEL_CONFIGURE="no"
 CLEAN_LEVEL="make,oldcache,debs"
 DEST_LANG="en_US.UTF-8"
 KERNEL_KEEP_CONFIG="no"
-EXTERNAL_NEW="prebuild"
+#EXTERNAL_NEW="prebuild"
 BUILD_ALL="yes"
 USE_TORRENT="yes"
 BUILD_KSRC="yes"
