--- a/configs/config-all-new-beta-images.conf
+++ b/configs/config-all-new-beta-images.conf
@@ -4,7 +4,7 @@ KERNEL_CONFIGURE="no"
 CLEAN_LEVEL="make,oldcache,debs"
 DEST_LANG="en_US.UTF-8"
 KERNEL_KEEP_CONFIG="no"
-EXTERNAL_NEW="prebuild"
+#EXTERNAL_NEW="prebuild"
 BUILD_ALL="yes"
 USE_TORRENT="yes"
 IGNORE_UPDATES="no"
